reset button and functionality added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <link rel="stylesheet" href="./style.css" />
   <body>
     <div class="container">
-      <button id="increaseBtn" class="increase-btn btn">Increase</button>
-      <p class="btn sum">0</p>
-      <button id="decreaseBtn" class="decrease-btn btn">Decrease</button>
+      <div><p class="btn sum">0</p></div>
+      <div class="">
+        <button id="increaseBtn" class="increase-btn btn">Increase</button>
+        <button id="decreaseBtn" class="decrease-btn btn">Decrease</button>
+        <button id="resetBtn" class="reset-btn btn">Reset</button>
+      </div>
     </div>
 
     <script src="./main.js"></script>
